Реализация Этапа 2 Дипломного проекта