@@ -1,59 +1,48 @@
 package ru.practicum.stats.client;
 
-import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.web.client.RestTemplateBuilder;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
-import org.springframework.web.client.RestTemplate;
-import org.springframework.web.util.UriComponentsBuilder;
+import org.springframework.web.util.DefaultUriBuilderFactory;
 import ru.practicum.dto.EndpointHitDto;
 import ru.practicum.dto.ViewStatsDto;
+
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 @Component
-@RequiredArgsConstructor
-public class StatsClient {
-
-    private final RestTemplate restTemplate;
-
-    @Value("${stats.server.url:http://localhost:9090/actuator/stats-server}")
-    private String serverUrl;
-
+public class StatsClient extends BaseClient {
     private static final DateTimeFormatter FORMATTER =
             DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
 
-    public EndpointHitDto hit(EndpointHitDto hitDto) {
-        String url = serverUrl + "/hit";
-        return restTemplate.postForObject(url, hitDto, EndpointHitDto.class);
+    public StatsClient(@Value("${stats-server.url:http://localhost:9090}") String serverUrl,
+                       RestTemplateBuilder builder) {
+        super(builder
+                .uriTemplateHandler(new DefaultUriBuilderFactory(serverUrl))
+                .build());
     }
 
-    public List<ViewStatsDto> getStats(LocalDateTime start,
-                                       LocalDateTime end,
-                                       List<String> uris,
-                                       boolean unique) {
+    public void hit(EndpointHitDto hitDto) {
+        post(hitDto);  // Используем BaseClient.post()
+    }
 
-        UriComponentsBuilder builder = UriComponentsBuilder
-                .fromHttpUrl(serverUrl + "/stats")
-                .queryParam("start", start.format(FORMATTER))
-                .queryParam("end", end.format(FORMATTER))
-                .queryParam("unique", unique);
+    public List<ViewStatsDto> getStats(LocalDateTime start, LocalDateTime end, List<String> uris, boolean unique) {
+        StringBuilder path = new StringBuilder("/stats?start=");
+        path.append(start.format(FORMATTER))
+                .append("&end=").append(end.format(FORMATTER))
+                .append("&unique=").append(unique);
 
         if (uris != null && !uris.isEmpty()) {
             for (String uri : uris) {
-                builder.queryParam("uris", uri);
+                path.append("&uris=").append(uri);  // ✅ Правильный формат для List<String>
             }
         }
 
-        String url = builder.toUriString();
-
-        ViewStatsDto[] response = restTemplate.getForObject(url, ViewStatsDto[].class);
-        if (response == null) {
-            return Collections.emptyList();
-        }
-        return Arrays.asList(response);
+        ResponseEntity<Object> response = get(path.toString(), null);
+        ViewStatsDto[] statsArray = (ViewStatsDto[]) response.getBody();
+        return statsArray != null ? Arrays.asList(statsArray) : List.of();
     }
 }
-
